test/test_units/test_kclvm/test_types/invalid_test_data/if/if_1.k
_a: int = 1
if True:
    _a = "2"
